--- a/css/base.css
+++ b/css/base.css
@@ -9,3 +9,30 @@ h1 {
     text-align: center;
     background-color: rgb(228, 228, 240);
 }
+
+
+select {
+    color: black;
+    padding: 10px;
+    background-color: aqua;
+    border: 10px solid pink;
+    font-weight: bolder;
+    font-size: larger;
+}
+
+ option {
+    color: navy;
+    background-color: rgb(232, 232, 241);
+    border-radius: 5px;
+    font-weight: bolder;
+    font-size: large;
+}
+
+
+footer {
+    color: rgb(51, 2, 2);
+    text-align: center;
+    background-color: rgb(228, 228, 240);
+    font-weight: bolder;
+    font-size: large;
+}
