--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,10 @@ h1 {
     background-color: rgb(228, 228, 240);
 }
 
+header {
+    border-bottom: 10px solid pink;
+    border-radius: 30px;
+}
 
 select {
     color: black;
