--- a/css/layouts.css
+++ b/css/layouts.css
@@ -9,7 +9,7 @@ h1 {
 
 div {
     float: left;
-    height: 500px;
+    height: 470px;
     margin: 3em;
     width: 300px;
     text-align: center;
@@ -22,6 +22,7 @@ main {
 header {
     text-align: center;
     margin: 20px auto;
+    padding: 30px;
 }
 
 footer {
