--- a/css/base.css
+++ b/css/base.css
@@ -31,6 +31,7 @@ select {
     padding: 10px;
     background-color: aqua;
     border: 10px solid pink;
+    border-radius: 5px;
     font-weight: bolder;
     font-size: larger;
 }
